# jupyter-matlab-proxy

./: .coveragerc  .gitignore  Advanced-Usage.md  Development-Customization-Info.md  Development_Customization_Info.md  LICENSE.md  Limitations.md  MANIFEST.in  MATLAB-Licensing-Info.md  MATLAB_Licensing_Info.md  README.md  SECURITY.md  hatch_build.py  limitations.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  troubleshooting.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/with-matlab/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.githooks/scripts/: sanitize-npm-registry.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: continuous-deployment.yml  publish-jupyter-matlab-proxy.yml  publish-tljh-matlab.yml  release.yml  run-e2e-tests.yml  run-integration-tests.yml  run-tests.yml  run-unit-tests.yml  test-jupyter-matlab-proxy.yml  test-tljh-matlab.yml
anaconda/: parse_meta_file.py
gui/: package-lock.json  package.json
gui/public/: index.html  manifest.json
gui/src/: index.css  index.js  jest.config.json  serviceWorker.js  setupTests.js
gui/src/actionCreators/: actionCreators.spec.js  index.js
gui/src/actions/: index.js
gui/src/components/App/: App.css  App.spec.js  index.js
gui/src/components/Confirmation/: Confirmation.spec.js  index.js
gui/src/components/Controls/: Controls.css  Controls.spec.js  index.js
gui/src/components/Error/: Error.css  Error.spec.js  index.js
gui/src/components/Help/: Help.css  Help.spec.js  index.js
gui/src/components/Information/: Information.css  Information.spec.js  index.js
gui/src/components/LicensingGatherer/: LicenseGatherer.spec.js  LicensingGatherer.css  MHLM.js  NLM.js  index.js
gui/src/components/MatlabJsd/: MatlabJsd.css  MatlabJsd.spec.js  index.js
gui/src/components/Overlay/: Overlay.css  Overlay.spec.js  index.js
gui/src/components/OverlayTrigger/: OverlayTrigger.css  OverlayTrigger.spec.js  ResizeOverlayTrigger.spec.js  index.js
gui/src/reducers/: index.js  reducers.spec.js
gui/src/selectors/: index.js  selectors.spec.js
gui/src/test/utils/: react-test.js
install_guides/the-littlest-jupyterhub/: .matlab_env  README.md  start-container-with-tljh-matlab.sh
install_guides/the-littlest-jupyterhub/tljh-matlab/: LICENSE  README.md  SECURITY.md  setup.py
install_guides/vscode/: README.md
install_guides/wsl2/: README.md
jupyter_matlab_proxy/: __init__.py  app.py  app_state.py  devel.py  jupyter_config.py  mw_environment_variables.py  mwi_embedded_connector.py  mwi_environment_variables.py  settings.py
jupyter_matlab_proxy/matlab/: startup.m
jupyter_matlab_proxy/util/: __init__.py  custom_http_headers.py  exceptions.py  mw.py  mw_logger.py  mwi_custom_http_headers.py  mwi_logger.py  mwi_validators.py  validators.py
src/jupyter_matlab_kernel/: README.md  __init__.py  __main__.py  base_kernel.py  jsp_kernel.py  kernel.json  kernel.py  kernel_factory.py  kernelspec.py  magic_execution_engine.py  magic_helper.py  mpm_kernel.py  mwi_comm_helpers.py  mwi_exceptions.py  mwi_logger.py  test_utils.py
src/jupyter_matlab_kernel/comms/: __init__.py
src/jupyter_matlab_kernel/comms/labextension/: labextension.py
src/jupyter_matlab_kernel/magics/: README.md  file.py  help.py  lsmagic.py  matlab.py  time.py
src/jupyter_matlab_kernel/magics/base/: matlab_magic.py
src/jupyter_matlab_kernel/matlab/: processJupyterKernelRequest.m
src/jupyter_matlab_kernel/matlab/+jupyter/: Idler.m  complete.m  execute.m  getOrStashExceptions.m  shutdown.m
src/jupyter_matlab_labextension/: .eslintrc.json  .gitignore  README.md  __init__.py  install.json  jest.config.js  package.json  tsconfig.json
src/jupyter_matlab_labextension/src/: icons.ts  index.ts  matlab_browser_button.ts  matlab_cm6_mode.ts  matlab_cm_mode.ts  matlab_files.ts  svg.d.ts
src/jupyter_matlab_labextension/src/codemirror-lang-matlab/: codemirror-lang-matlab.ts  indent-matlab.ts
src/jupyter_matlab_labextension/src/lezer-matlab/: package-lock.json  package.json  rollup.config.js
src/jupyter_matlab_labextension/src/plugins/: matlabCM6Mode.ts  matlabCommunication.ts  matlabFiles.ts  matlabToolbarButton.ts
src/jupyter_matlab_labextension/src/tests/: jest-setup.ts  matlabCommunication.test.ts  matlabToolbarButton.test.ts
src/jupyter_matlab_labextension/src/utils/: notebook.ts
src/jupyter_matlab_labextension/style/: base.css  index.css  index.js
src/jupyter_matlab_proxy/: README.md  __init__.py
tests/: README.md  __init__.py  conftest.py  server.py  test_app.py  test_devel.py  test_jupyter_server_proxy.py  test_mw.py  test_non_dev_mode.py  test_settings.py
tests/e2e/: .eslintrc.json  global-setup.ts  jupyter_server_test_config.py  package-lock.json  package.json  playwright.config.ts
tests/e2e/playwright-tests/: matlab_execution.test.ts  ui_tests.test.ts
tests/e2e/playwright-tests/utils/: licensing.ts  matlab_notebook.ts
tests/e2e/tests/: matlab_execution.test.ts  ui_tests.test.ts
tests/e2e/tests/utils/: licensing.py  licensing.ts  matlab_notebook.ts
tests/integration/: TestSimpleAddition.m  conftest.py  integration_test_utils.py  test_matlab_integration.py
tests/integration/utils/: __init__.py  integration_test_utils.py  licensing.py
tests/matlab-tests/: TestCompleteFunction.m  TestExecuteFunction.m  TestGetOrStashExceptionsFunction.m  TestIdlerFunction.m
tests/unit/: test_jupyter_server_proxy.py
tests/unit/jupyter_matlab_kernel/: test_kernel.py  test_kernel_factory.py  test_kernel_json.py  test_kernelspec.py  test_magic_execution_engine.py  test_magic_helper.py  test_mpm_kernel.py  test_mwi_comm_helpers.py
tests/unit/jupyter_matlab_kernel/comms/: test_labextension.py
tests/unit/jupyter_matlab_kernel/magics/: test_file.py  test_help.py  test_lsmagic.py  test_matlab.py  test_time.py
tests/util/: test_custom_headers.py  test_mw.py  test_mw_logger.py  test_mw_validators.py  test_mwi_custom_http_headers.py  test_mwi_logger.py  test_mwi_validators.py
troubleshooting/: troubleshooting.md  troubleshooting.py
(+16 files in other folders)
